# othpc

./: .gitignore  ChangeLog  README.md  pyproject.toml
.github/workflows/: build.yml
cas_pedagogiques/cas_jouet_EFI/: demo_dask.py  demo_glost.sh  demo_jobarray.sh
cas_pedagogiques/cas_jouet_EFI/cantilever_beam/: README.md  beam_evals.pkl  bug_tentative_reproduction.py  cantilever_beam.py  evaluate_doe.py  glost_launcher.sh  jobarray_launcher.sh  mc_expe.py  wrapper_base.py  wrapper_dask.py  wrapper_glost.py  wrapper_jobarray.py
cas_pedagogiques/cas_jouet_JME/: README.rst  cantilever_beam.py  dask_function.py  run_cronos.py  wrapper_dask.py
cas_pedagogiques/cas_jouet_JME/input_doe/: doe.csv
cas_pedagogiques/cas_jouet_MBN/: README.md
cas_pedagogiques/cas_jouet_MBN/beam_local/: .gitignore  BeamFunction.py  README.md  beam_input_template.xml  demo_beam.py
cas_pedagogiques/cas_jouet_MBN/beam_with_jobarray/: README.md  _beam_outputs_.xml  beam.xml  input.csv  output.csv  runGatherResultsBeam.py  runParametricBeam.py  test.output.txt  test.sh
cas_pedagogiques/cas_jouet_MBN/beam_with_ot/: .gitignore  README.md
cas_pedagogiques/cas_jouet_PBL/: Readme.md
cas_pedagogiques/cas_jouet_ydefx/: Readme.md  run_cronos.py  ydefxwrapper.py
doc/: conf.py  index.rst
doc/_templates/: class.rst_t
doc/examples/: examples.rst
doc/user_manual/: user_manual.rst
othpc/: README.md  setup.py  submit_function.py
othpc/othpc/: __init__.py  dask_function.py  jobarray_function  jobarray_function.py  submit_function.py  submitit_function.py  utils.py
othpc/othpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
othpc/test/: test_cantilever_beam.py  test_mpi_simulator.py  test_truss_fem_model.py
otwrap/: README.md  setup.py
otwrap/otwrap/: OpenTURNSWrapper.py  __init__.py
otwrap/otwrap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_cantilever_beam.py  test_docstring.py  test_mpi_simulator.py  test_truss_fem_model.py
(+115 files in other folders)
